--- a/SpaceShooter/Config/DefaultGame.ini
+++ b/SpaceShooter/Config/DefaultGame.ini
@@ -1,3 +1,8 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=99BD843B47714B9BE4039E96DCC97A95
+ProjectName=Space Shooter
+CompanyName=Social Cube Media
+CompanyDistinguishedName=
+CopyrightNotice=Social Cube Media 2020
+
